# tpParalela

./: CMakeCache.txt  CMakeLists.txt  Makefile  Untitled.ipynb  analise(AutoRecovered).xlsx  analise.xlsx  cmake_install.cmake  count.c  count.h  h.txt  lk.c  lk.h  m  main.c  notes  q.c  q.h  report.docx  table1.csv  table1.xlsx  tpParalela  ~$analise.xlsx  ~$report.docx
tpParalela/: README  main.c
